--- a/outlands/razor-ce/pickup-cotton.razor
+++ b/outlands/razor-ce/pickup-cotton.razor
@@ -1,4 +1,7 @@
-// Pickup Cotton
+#SCRIPT: Pickup Cotton
+#Author: Talik Starr
+#Shard: Outlands
+
 if insysmsg 'world is saving'
     for 30
         overhead 'Waiting for world save...'
